// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Forger Info Delete Block should update forger info after delete block 1`] = `
Object {
  "totalProducedBlocks": 0,
  "totalReceivedFees": 0n,
  "totalReceivedRewards": 0n,
  "votesReceived": Array [],
}
`;

exports[`Forger Info New Block Vote transactions should save forger info with stakes received in new block 1`] = `
Object {
  "totalProducedBlocks": 0,
  "totalReceivedFees": 0n,
  "totalReceivedRewards": 0n,
  "votesReceived": Array [
    Object {
      "address": Object {
        "data": Array [
          208,
          70,
          153,
          229,
          124,
          74,
          56,
          70,
          201,
          136,
          243,
          193,
          83,
          6,
          121,
          111,
          142,
          174,
          92,
          28,
        ],
        "type": "Buffer",
      },
      "amount": 1000000000n,
    },
  ],
}
`;

exports[`Forger Info New Block Vote transactions should update forger info with multiple stakes received for same validator in new block 1`] = `
Object {
  "totalProducedBlocks": 0,
  "totalReceivedFees": 0n,
  "totalReceivedRewards": 0n,
  "votesReceived": Array [
    Object {
      "address": Object {
        "data": Array [
          208,
          70,
          153,
          229,
          124,
          74,
          56,
          70,
          201,
          136,
          243,
          193,
          83,
          6,
          121,
          111,
          142,
          174,
          92,
          28,
        ],
        "type": "Buffer",
      },
      "amount": 7000000000n,
    },
  ],
}
`;

exports[`Forger Info New Block Vote transactions should update forger info with upvote and downvote for same validator in new block 1`] = `
Object {
  "totalProducedBlocks": 0,
  "totalReceivedFees": 0n,
  "totalReceivedRewards": 0n,
  "votesReceived": Array [
    Object {
      "address": Object {
        "data": Array [
          208,
          70,
          153,
          229,
          124,
          74,
          56,
          70,
          201,
          136,
          243,
          193,
          83,
          6,
          121,
          111,
          142,
          174,
          92,
          28,
        ],
        "type": "Buffer",
      },
      "amount": 3000000000n,
    },
  ],
}
`;

exports[`Forger Info New Block Vote transactions should update forger info with stakers info and remove when amount becomes zero 1`] = `
Object {
  "totalProducedBlocks": 0,
  "totalReceivedFees": 0n,
  "totalReceivedRewards": 0n,
  "votesReceived": Array [],
}
`;

exports[`Forger Info New Block Vote transactions should update forger info with stakers info and remove when amount becomes zero 2`] = `
Object {
  "totalProducedBlocks": 0,
  "totalReceivedFees": 0n,
  "totalReceivedRewards": 0n,
  "votesReceived": Array [
    Object {
      "address": Object {
        "data": Array [
          208,
          70,
          153,
          229,
          124,
          74,
          56,
          70,
          201,
          136,
          243,
          193,
          83,
          6,
          121,
          111,
          142,
          174,
          92,
          28,
        ],
        "type": "Buffer",
      },
      "amount": 2000000000n,
    },
  ],
}
`;

exports[`Forger Info New Block should save forger info after new block 1`] = `
Object {
  "totalProducedBlocks": 0,
  "totalReceivedFees": 0n,
  "totalReceivedRewards": 0n,
  "votesReceived": Array [],
}
`;

exports[`Forger Info New Block should save forger info with received fees if transactions included in new block 1`] = `
Object {
  "totalProducedBlocks": 0,
  "totalReceivedFees": 0n,
  "totalReceivedRewards": 0n,
  "votesReceived": Array [],
}
`;
